added icons to buttons

--- a/Snippets/Snippets.csproj
+++ b/Snippets/Snippets.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MahApps.Metro.IconPacks.BootstrapIcons" Version="4.8.0" />
+  </ItemGroup>
+
 </Project>
