--- a/Snippets/Snippets.csproj
+++ b/Snippets/Snippets.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>code_icon-icons.com_66870.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
